--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,4 +1,3 @@
---constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.11.txt"
+--constraint "constraints.txt"
 
-apache-airflow-providers-snowflake==5.5.1
-apache-airflow-providers-mysql==5.6.1
+apache-airflow-providers-databricks==6.8.0
